2003-06-15  Arafat Medini  <lumina@silverpen.de>

	* configure.in: Added locale "ar" Arabic to ALL_LINGUAS.


2003-06-13  Tor Lillqvist  <tml@iki.fi>

	* atk/atkobject.c (atk_role_get_localized_name): Set
	gettext_initialized.

	* atk-zip.sh.in (DEVZIP): libtool 1.5 installs DLLs in the bin
	directory, so look there, too. Include the message catalogs.

	Merge from HEAD:

	* Makefile.am (EXTRA_DIST): Dist atk-zip.sh.in, not atk-zip.sh.

	* atk/atk.def: Add missing entries, thanks to Cedric Gustin.

	* atk/atk.rc.in: New file, for version info in the DLL on
	Windows. Similar as in GLib, GTK, etc.

	* configure.in: Expand atk/atk.rc.

	* atk/Makefile.am: Use atk.rc on Windows.
	(EXTRA_DIST): Distribute atk.rc.in.

	* atk/atkobject.c: On Windows, don't use hardcoded ATKLOCALEDIR,
	but deduce it from DLL location, like GLib, GTK etc do.

2003-05-20  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added cy to ALL_LINGUAS

2003-05-13  Padraig O'Briain  <padraig.obriain@sun.com>

	* ===== Released 1.2.4=====

	* configure.in: Version 1.2.4, interface age 4, binary age 204

	* NEWS: Updated.

2003-05-13  Padraig O'Briain  <padraig.obriain@sun.com>

	* docs/atk-sections.txt: Add entries in order to empty at-unused.txt.

	* docs/tmpl/atkobject.sgml: Remove documentation for AtkRole and
	AtkLayer as it is inline.

2003-05-05  Christian Rose  <menthos@menthos.com>

	* configure.in: Added sr and sr@Latn to ALL_LINGUAS.

2003-04-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* ===== Released 1.2.3=====

	* configure.in: Version 1.2.3, interface age 3, binary age 203

	* NEWS: Updated.

2003-04-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* atk/atkobject.c (atk_object_set_role): Add check that role is
	actually being changed. Do not emit notification for initial
	role setting. (bug #107710)

	* atk/atkgobjectaccessible.c (atk_gobject_accessible_from_object):
	Correct creation of non-AtkGObjectAccessible (bug #107124)
