@@ -1,3 +1,9 @@
+2004-03-22  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* configure.in:
+	* atk/Makefile.am: Update to build on Cygwin. Fixes bug #137665.
+	Patch from Roger Leigh.
+
 2003-06-15  Arafat Medini  <lumina@silverpen.de>
 
 	* configure.in: Added locale "ar" Arabic to ALL_LINGUAS.
